# substrate-proof-of-work

./: Cargo.toml
node/src/: service.rs
pow/: Cargo.toml
pow/src/: lib.rs
